Fix article overflow with scroll

--- a/source/styles/article.css
+++ b/source/styles/article.css
@@ -13,6 +13,10 @@
 
 */
 
+#articlebody {
+  overflow-y: scroll;
+}
+
 .article {
   display: block;
   position:relative;
